# MILEX

./: .gitignore  LICENSE  README.md  ollama-ask  pyproject.toml  requirements.txt
Honeypot/: app.py
Honeypot/core/: geoip.py  logger.py
Honeypot/data/: attacks.db
Honeypot/services/: http_honeypot.py  server_key  server_key.pub  ssh_honeypot.py
Honeypot/static/css/: dashboard.css
Honeypot/static/js/: dashboard.js
Honeypot/templates/: dashboard.html  logs.html  registered_admins.html
milex/: __init__.py  agent.py  cli.py  commands.py  config.py  mcp_client.py  mcp_server.py  rag.py  telemetry.py  tools.py  ui.py  utils.py
tests/: conftest.py  test_config.py  test_tools.py
