[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "milex"
version = "1.0.0"
description = "AI-powered CLI that generates code and controls your computer using Ollama local models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0.0",
    "ollama>=0.1.0",
    "typer>=0.9.0",
    "prompt_toolkit>=3.0.0",
    "pyperclip>=1.8.0",
    "psutil>=5.9.0",
    "pathspec>=0.11.0",
    "numpy>=1.20.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
    "mcp>=1.0.0,<1.20.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-languages>=1.10.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
milex = "milex.cli:app"

[tool.setuptools.packages.find]
where = ["."]
